# dotnet-wasi-tls

./: .gitignore  .gitmodules  App.cs  App.csproj  Dns.cs  Imports.cs  ImportsWorld.wit.imports.wasi.clocks.v0_2_1.MonotonicClockInterop.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.ErrorInterop.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.IError.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.IPoll.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.IStreams.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.PollInterop.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.StreamsInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.IIpNameLookup.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.INetwork.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.ITcp.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.IUdp.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.InstanceNetworkInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.IpNameLookupInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.NetworkInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.TcpCreateSocketInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.TcpInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.UdpCreateSocketInterop.cs  ImportsWorld.wit.imports.wasi.sockets.v0_2_1.UdpInterop.cs  ImportsWorld_component_type.wit  README.md  TcpClient.cs  generate-bindings.sh  library.csproj  nuget.config  rd.xml
host/: Cargo.toml
host/src/: main.rs
src/: App.cs  Dns.cs  Imports.cs  ImportsWorld.wit.imports.wasi.clocks.v0_2_1.MonotonicClockInterop.cs  ImportsWorld.wit.imports.wasi.io.v0_2_1.ErrorInterop.cs  SslStream.cs  (+26 more)
