[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
bytes = "1.7.2"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
