[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
bytes = "1.7.2"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
native-tls = {version = "0.2", features = ["alpn"]}
tokio-native-tls = "0.3.1"
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
wasmtime-wasi-http = "24.0.0"

[patch.crates-io]
native-tls = { git = "https://github.com/jsturtevant/rust-native-tls.git", branch="cert-chain" }